# geometry

./: .cvsignore  ChangeLog  Makefile.am  SConscript  acconfig.h  acinclude.m4  configure.in  geometry.spec.in  geometryLib.py
doc/: index.html  release.notes
geometry/: Box.h  Cone.h  Conic.h  Cons.h  CoordSystem.h  CoordTransform.h  Cylinder.h  Digitizer.h  GeomObject.h  Helix.h  Hexahedron.h  Hype.h  Hyperbolic.h  Intersection.h  Makefile.am  Plane.h  Point.h  Ray.h  RootFinder.h  Shape.h  Sphe.h  Sphere.h  Surface.h  Track.h  Trap.h  Trd1.h  Trd2.h  Tube.h  Tubs.h  Vector.h  Volume.h  Wedge.h
mgr/: Doxyfile  fincludes  geometry.dsw  geometrylib.dep  geometrylib.dsp  geometrylib.mak  requirements
src/: Box.cxx  Cone.cxx  Conic.cxx  Cons.cxx  CoordTransform.cxx  Cylinder.cxx  GeomObject.cxx  Helix.cxx  Hexahedron.cxx  Hype.cxx  Hyperbolic.cxx  Intersection.cxx  Makefile.am  Plane.cxx  Point.cxx  Ray.cxx  RootFinder.cxx  Shape.cxx  Sphe.cxx  Sphere.cxx  Surface.cxx  Track.cxx  Trap.cxx  Trd1.cxx  Trd2.cxx  Tube.cxx  Tubs.cxx  Vector.cxx  Volume.cxx  Wedge.cxx
