## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.1 1999/12/24 21:20:28 pfkeb Exp $
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following set,  else would follow GNU conventions
AUTOMAKE_OPTIONS = foreign

geometryincludedir = $(includedir)/geometry

geometryinclude_HEADERS = \
	Box.h  \
	Cone.h  Conic.h  Cons.h  CoordSystem.h  CoordTransform.h  Cylinder.h \
	Digitizer.h GeomObject.h \
	Helix.h Hexahedron.h Hype.h Hyperbolic.h \
	Intersection.h Plane.h Point.h Ray.h RootFinder.h \
	Shape.h Sphe.h Sphere.h Surface.h \
	Track.h Trap.h Trd1.h Trd2.h Tube.h Tubs.h \
	Vector.h Volume.h Wedge.h
